fix: fix skintone picker on iOS

--- a/src/picker/components/Picker/Picker.scss
+++ b/src/picker/components/Picker/Picker.scss
@@ -20,6 +20,10 @@
   @media (prefers-reduced-motion: reduce) {
     transition: none;
   }
+
+  &.no-animate {
+    transition: none;
+  }
 }
 
 
